# eggtray

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: check.md  check.yml
.github/workflows/: build.yml  check.yml  deploy.yml  issue.yml  test.yml
jg/eggtray/: cli.py  enums.py  github_app.py  issue.py  main.py  models.py  profile.py  schema.py  topics.py
profiles/: Alena0490.yml  CerxMe.yml  Dannirl6378.yml  Denebola68.yml  Hanka8.yml  ImuneGH.yml  MaksymKoval.yml  Marcel-git666.yml  MarinaP-prog.yml  Paprcek.yml  PavlaBerankova.yml  SandraHeinzova.yml  TerkaSm.yml  Veronika181.yml  Ypsilonx.yml  Zocann.yml  d-kefurt.yml  fusatytata.yml  honzajavorek.yml  iVlastart.yml  jankavka.yml  lifeisavictory.yml  marekpistorius.yml  miccerny.yml  ninabel.yml  svinstvo-og.yml  tehotur.yml  vesely-jiri.yml  wendykr.yml
src/jg/eggtray/: checks.py  cli.py  enums.py  issue.py  issues.py  models.py  project_images.py  reports.py
tests/: test_profiles.py  test_schema.py
