[tool.poetry]
name = "jg.eggtray"
version = "0.0"
description = "Entry level candidates API"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/eggtray/"
packages = [{ include = "jg" }]

[tool.poetry.scripts]
eggtray = "jg.eggtray.cli:main"

[tool.poetry.dependencies]
python = "~3.12"
click = "8.1.8"
"jg.hen" = { git = "https://github.com/juniorguru/hen.git" }
pydantic = "2.10.6"
pyyaml = "6.0.3"
pycountry = "24.6.1"
githubkit = {extras = ["auth-app"], version = "0.12.9"}

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-ruff = "0.5"
ruff = "0.14.*"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--ff --ruff --ruff-format"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.hen"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
