[project]
name = "jg.eggtray"
version = "0.0"
description = "Entry level candidates API"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.0",
    "jg.hen@git+https://github.com/juniorguru/hen.git",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.2",
    "pycountry>=24.6.1",
    "githubkit[auth-app]>=0.12.9",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
]

[project.urls]
homepage = "https://junior.guru/candidates/"
repository = "https://github.com/juniorguru/eggtray/"

[project.scripts]
eggtray = "jg.eggtray.cli:main"

[dependency-groups]
dev = [
    "pytest-ruff>=0.5",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.hen"]

[build-system]
requires = ["uv_build>=0.8.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.eggtray"
