[project]
name = "jg.eggtray"
version = "0.0"
description = "Entry level candidates API"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.2",
    "jg.hen@git+https://github.com/juniorguru/hen.git",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "pycountry>=26.2.16",
    "githubkit[auth-app]>=0.15.3",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "python-slugify>=8.0.4",
    "playwright>=1.58.0",
]

[project.urls]
homepage = "https://junior.guru/candidates/"
repository = "https://github.com/juniorguru/eggtray/"

[project.scripts]
eggtray = "jg.eggtray.cli:main"

[dependency-groups]
dev = [
    "pytest-ruff>=0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.hen"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.eggtray"
